PAYARA-4238 improved settings and labelling; fixed layout span gaps and moving up/down

--- a/appserver/monitoring-console/webapp/src/main/webapp/css/monitoring-console.css
+++ b/appserver/monitoring-console/webapp/src/main/webapp/css/monitoring-console.css
@@ -65,6 +65,9 @@ input[type=text] {
   width: 150px;
   max-width: 150px;
 }
+input[type=text]:invalid {
+  background-color: #ffdddd;
+}
 input[type=number] {
   width: 60px;
 }
@@ -237,6 +240,9 @@ button:hover {
   font-weight: bold;
   border-bottom: 1px solid #bbb;
 }
+#Settings table td {
+  max-width: 230px;
+}
 #Settings table td:first-child {
   width: 120px;
   vertical-align: top;
@@ -391,6 +397,7 @@ table.tags th, table.tags td {
 /* Menus */
 #Menu {
   margin-top: 10px;
+  padding-right: 30px;
 }
 .Menu {
   float: right;
